docs/.vuepress/theme/assets/less/dialtone-docs.less
/* ... */
html {
  scroll-behavior: smooth;
  scroll-padding-top: 6.4rem;
}

//  ============================================================================
//  $   COLOR PALETTES
//      Because we can't target :first-of-type or :first-child using our utility classes.
//  ----------------------------------------------------------------------------
.dialtone-color-grid__item:first-of-type {
  border-top-left-radius: var(--su4);
  border-top-right-radius: var(--su4);
}

.dialtone-color-grid__item:last-of-type {
  border-bottom-right-radius: var(--su4);
  border-bottom-left-radius: var(--su4);
}

//  ============================================================================
//  $   SEARCH BUTTON
//      Override search button with dialtone styles
//  ----------------------------------------------------------------------------
button.DocSearch-Button {
  gap: var(--su2);

  &:hover {
    box-shadow: unset;
  }

  .d-btn();
  .d-btn--muted();
  .d-btn--outlined();

  .d-btn__label {
    color: var(--fc-placeholder);
  }

  justify-content: left;
  width: 22.9rem;
}

span.DocSearch-Button-Container {
  display: none;
}

span.DocSearch-Button-Keys {
  display: none;
}

//  ============================================================================
//  $   SEARCH BUTTON
//      Override search button with dialtone styles
//  ----------------------------------------------------------------------------
a.router-link-active {
  font-weight: var(--fw-semibold);
}

//  ============================================================================
//  $   TOC
//      Because we're using a third-party plugin to generate the subnav menu,
//      we can't add utility classes directly to the HTML. So we have to use
//      custom CSS here instead.
//  ----------------------------------------------------------------------------
.toc {
  &-item {
    @media screen and (max-width: 980px) {
      display: inline-block;
      .d-link();
    }
  }
}

.toc ol {
  .d-ls-reset();

  display: flex;
  flex-direction: column;

  .d-stack4();
}

//  Subsections
.toc li > ol {
  margin-top: var(--su4);
  margin-left: var(--su16);

  a {
    font-size: var(--fs-100);
  }
}

.toc a {
  //  We'll base our styles on d-link
  .d-link();
  .d-link--muted();

  //  Then make some specific adjustments
  display: flex;
  justify-content: flex-start;
  padding: var(--su2) var(--su8);
  font-size: var(--fs-200);
  line-height: var(--lh6);
  text-decoration: none;
  border-radius: var(--br4);

  &:hover {
    text-decoration: none;
    color: var(--primary-color);
    // background-color: var(--black-200);
  }

  &.active {
    color: var(--primary-color);

    &::before {
      position: absolute;
      top: var(--su0);
      bottom: var(--su0);
      left: var(--sun4);
      width: var(--su4);
      background-color: var(--primary-color);
      border-radius: var(--br4);
      content: '';
    }
  }
}

//  ============================================================================
//  $   LAYOUT
//      Because the doc site needs layout specifications that aren't
//      appropriate to ship as part of Dialtone.
//  ----------------------------------------------------------------------------
.main-content {
  max-width: 99rem;
  margin: 0 auto;
  padding: 2rem 2.5rem;
}

a.header-anchor {
  float: left;
  margin-left: -0.87em;
  padding-right: 0.23em;
  opacity: 0;
}
.d-docsite--header, .d-docsite--subheader {
  &:hover a.header-anchor {
    opacity: 1;
  }
}

.d-ga-toc {
  grid-area: toc !important;
}

.d-gl-docsite {
  grid-template-areas: 'sidebar content';
  grid-template-columns: [sidebar] 21.6rem [content] minmax(32rem, 75rem);
  column-gap: 4.8rem;
}

.d-gl-docsite-toc {
  grid-template-areas: 'sidebar content toc';
  grid-template-columns: [sidebar] 21.6rem [content] minmax(32rem, 75rem) [toc] minmax(min-content, 21.6rem);
  column-gap: 4.8rem;
}


//  ============================================================================
//  $   ICON GRID
//      Styles our icon pages
//  ----------------------------------------------------------------------------
.d-gl-docsite-icons {
  --icon-card-width: 12rem;
  --icon-grid-columns: auto-fit;

  display: grid;
  grid-auto-rows: 12rem;
  grid-template-columns: repeat(var(--icon-grid-columns), [col] var(--icon-card-width));
}

.d-gl-docsite-icons--large {
  .d-gl-docsite-icons();

  --icon-card-width: 18rem;
  --icon-grid-columns: auto-fit;

  grid-auto-rows: 18rem;
}

.dialtone-icon-grid__item {
  position: relative;
}

.dialtone-icon-card {
  position: relative;
  display: flex;
  width: 100%;
  height: 100%;
}

.dialtone-icon-card__header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  padding: var(--su8);
  background-color: hsl(var(--black-200-h), var(--black-200-s), var(--black-200-l), 0);
  border-radius: var(--su8);
  cursor: pointer;
  transition: all 150ms var(--ttf-in-out);

  &:hover {
    background-color: hsl(var(--black-200-h), var(--black-200-s), var(--black-200-l), 0.4);
  }

  .dialtone-icon-card[data-selected='yes'] & {
    background-color: hsl(var(--black-200-h), var(--black-200-s), var(--black-200-l), 0.4);
  }
}
/* ... */

